继承redis ，mybatis plus